# stvec

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
benchmark/: tfidf.py
src/: indexer.rs  lib.rs  tfidf.rs  tokenizer.rs  vocab.rs
stvec/: __init__.py  indexer.py  tfidf.py
tests/: test_indexer.py  test_stvec.py  test_tfidf.py
