[package]
name = "stvec"
version = "0.1.0"
edition = "2021"
authors = ["altescy <altescy@fastmail.com>"]

[lib]
name = "stvec"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.56"
hashbrown = "0.12.0"
numpy = "0.16.2"
pyo3 = { version = "0.16.1", features = ["extension-module", "anyhow", "hashbrown"] }
